# patient

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 111e9f3c230a_create_aaryan_singh_tables.py
src/: database.py  main.py  settings.py
src/api/: appointments.py  doctors.py  patients.py
src/models/: __init__.py  appointment.py  base.py  doctor.py  patient.py
src/schemas/: appointments.py  doctors.py  patients.py
src/services/: appointments.py  doctors.py  patients.py
tests/: conftest.py  test_appointments.py  test_patients.py
