[tool.poetry]
name = "patient-encounter-system"
version = "0.1.0"
description = "Production-grade Medical Encounter Management Backend"
authors = ["PES2UG22CS009 <pes2ug22cs009@pesu.pes.edu>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.29.0,<0.30.0"
sqlalchemy = ">=2.0.30,<3.0.0"
pymysql = ">=1.1.0,<2.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
pydantic = ">=2.6.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
ruff = ">=0.4.0,<1.0.0"
black = ">=24.0.0,<25.0.0"
bandit = ">=1.7.8,<2.0.0"
alembic = ">=1.13.0,<2.0.0"
httpx = ">=0.27.0,<1.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
